# cosy-pgwish

./: 00Liesmich  Makefile.am  Makefile.in  README.md  configure  configure.ac
blt-1.7/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
blt-1.7/help/: Blt.brf
blt-1.7/man/: barchart.man  bldmanhelp.tmp  bltmanpages  dragdrop.man  graph.man  graph.ps
blt-1.7/src/: Makefile.am  Makefile.in  blt.h  bltBgexec.c  bltConfig.h  bltConfig.h.in  bltGrAxis.c  bltGrElem.c  bltGrPS.c  bltGraph.h  bltHtext.c  bltUtil.c  script.awk
calib/: Makefile.am  Makefile.in  calib.sh  configure  configure.ac
calib/calib/: Makefile.am  Makefile.in  README  cosmo_calib.cpp
calib/calib_get.neu/: Makefile.am  Makefile.in  cosmo_calib_get.cpp
calib/h/: Makefile.am  Makefile.in  basename.h  calibdefs.h  calibglobals.h  fgetstr.h  pgcalib.h  pgcosmocalib.h  pgcosmocalib.neu.h  pgdbif.h  pgpatch.h
calib/p/: Makefile.am  Makefile.in  README  calib_get_f.c  calib_get_u.c
calib/p++.neu/: Makefile.am  Makefile.in  README  pgcalib.cpp  pgcosmocalib.cpp  pgdbif.cpp
coob_tx/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  coob_tx.c  coobp.h  pgdefs.h  txp.h
dipol_tools/: Makefile.am  Makefile.in  configure  configure.ac
dipol_tools/dipol_angle/: Makefile.am  Makefile.in  main.cpp  makefile.Linux
dipol_tools/dipol_strom/: Makefile.am  Makefile.in  main.cpp  makefile.Linux
itcl-1.5/: Makefile.am  Makefile.in  configure  configure.ac
itcl-1.5/src/: Makefile.am  Makefile.in  itcl_core.c  tclAppInit.c
itcl_LW-1.0/Widgets/: Blink.itcl  ButtonsBox.itcl  Copyright  Counter.itcl  DataEntry.itcl  Dial.itcl  DialogShell.itcl  Feedback.itcl  FilteredBox.itcl  Icon.itcl  InfoLine.itcl  ListBox.itcl  LogWindow.itcl  MainShell.itcl  Makefile.am  Makefile.in  MessageLine.itcl  MessageList.itcl  Object.itcl  Paned.itcl  PixmapSelect.itcl  Scheduler.itcl  ScrolledCanvas.itcl  ScrolledList.itcl  ScrolledTable.itcl  SelectBox.itcl  Shell.itcl  Sqeezer.itcl  StextEd.itcl  Widget.itcl  configure  configure.ac  dd-prot.tcl  menu_bar.tcl  tclIndex
tcl-dp3.2/: ANNOUNCE  Makefile.am  Makefile.in  README  ToDo  bldmanhelp.tmp  changes  config.h.in  configure  configure.ac  dp.h  dpInt.h  dpaddress.c  dpmanpages  dpnetInit.c  dpnetwork.c  dprpc.c  tkAppInit.c
tcl-dp3.2/dphelp/: Tcl-DP.brf
tcl-dp3.2/tests/: auth.test  connect.test  oo.test  rpc.test  udp.test
tcl7.3/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  tcl.h  tclBasic.c  tclCmdMZ.c  tclInt.h  tclUnix.h  tclUnixAZ.c  tclUnixStr.c  tclUtil.c
tcl7.3/debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  tcl7.3.cron.d.ex  tcl7.3.default.ex  tcl7.3.doc-base.EX  watch.ex
tclX7.3b/: Config.mk  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
tclX7.3b/man/: CmdWrite.3  Handles.3  Keylist.3  Memory.n  TclX.n  TclXInit.3
tclX7.3b/osSupport/: random.c  strftime.c  system.c
tclX7.3b/src/: Makefile.am  Makefile.in  tcl++.C  tcl++.h  tclExtdInt.h  tclExtend.h  tclXAppInit.c  tclXbsearch.c  tclXchmod.c  tclXclock.c  tclXcmdInit.c  tclXcmdloop.c  tclXcnvclock.c  tclXconfig.h  tclXdata.c  tclXdebug.c  tclXdup.c  tclXfcntl.c  tclXfilecmds.c  tclXfilescan.c  tclXflock.c  tclXfstat.c  tclXgeneral.c  tclXgetdate.c  tclXgetdate.y  tclXhandles.c  tclXid.c  tclXinit.c  tclXkeylist.c  tclXlib.c  tclXlist.c  tclXmain.c  tclXmath.c  tclXmsgcat.c  tclXprocess.c  tclXprofile.c  tclXregexp.c  tclXselect.c  tclXshell.c  tclXsignal.c  (+3 more)
tclX7.3b/tclhelp/: Tcl.brf  TclX.brf
tclX7.3b/tclsrc/: Makefile.am  Makefile.in  TclInit.tcl  arrayprocs.tcl  buildhelp.tcl  buildidx.tcl  compat.tcl  convlib.tcl  edprocs.tcl  fmath.tcl  forfile.tcl  foxGetOpt.tcl  globrecur.tcl  help.tcl  loadouster.tcl  parray.tcl  profrep.tcl  pushd.tcl  setfuncs.tcl  showproc.tcl  stringfile.tcl  tclIndex  tcllib.tcl  tclshell.tcl
tclX7.3b/tests/: arrayproc.test  bsearch.test  chartype.test  chmod.test  clock.test  cmdtrace.test  compat.test  convlib.test  dup.test  fcntl.test  filecmds.test  filescan.test  flock.test  fmath.test  forfile.test  fstat.test  globrecur.test  help.test  keylist.test  lassign.test  lgets.test  list.test  loop.test  math.test  msgcat.test  process.test  profile.test  pushd.test  select.test  setfuncs.test  showproc.test  signal.test  string.test  stringfil.test  tcllib.test  testlib.tcl  unixcmds.test
tclX7.3b/tkhelp/: Tk.brf
tclX7.3b/tksrc/: Makefile.am  Makefile.in  kde3.cpp  tclUtil.c  tclXgettimeofday.c  tcl_binary.bak  test.tcl  ti_tkinit.C  tkWm.c  tkX.h  tkXAppInit.c  tkXAppInit.c.org  tkXdata.c  tkXinit.c  tkXmain.c  tkXshell.c
tclX7.3b/tktclsrc/: tclhelp.tcl  tkdemo.tcl
tclX7.3b/tktests/: signal.test
tclX7.3b/tools/: Makefile.am  Makefile.in  bldmanhelp.tcl  buildutil.tcl  cphelpdir.sh  cpmanpages.tcl  genindex.tcl  getversion.c  instcopy.tcl  libconvert.tcl  symlinkext.sh  tclmanpages  tkmanpages
tgmt/: 00Liesmich  Makefile.am  Makefile.in  configure  configure.ac
tgmt/ddres/: Makefile.am  Makefile.in  ddres.c
tgmt/download/: Makefile.am  Makefile.in  download.c  version.c
tgmt/include/: Makefile.am  Makefile.in  defs.h  hardware.h  io_call.h  lantrap.h  mailbox.h  mbox.h  mbuf.h  miniload.h  netio.h  (+14 more)
tix/: Argv.tcl  Balloon.tcl  Combobox.tcl  Control.tcl  DlgBtns.tcl  Filebox.tcl  Intrinsc.tcl  LabFrame.tcl  Makefile.am  Makefile.in  NewBind.tcl  Primitiv.tcl  PupMenu.tcl  SListbox.tcl  Select.tcl  StdDlgB.tcl  Tix.tcl  Toplevel.tcl  Utils.tcl  configure  configure.ac  tclIndex  tkBinding.tcl
tk3.6/: Makefile.am  Makefile.in  bitmap.c  config.h.in  configure  configure.ac  gif.c  patchlevel.h  raw256.c  tclRawTCP.c  tclRawTCP.h  tk.h  tkAppInit.c  tkBargraph.c  tkButton.c  tkCanvPs.c  tkCanvas.h  tkCmds.c  tkConfig.c  tkConfig.h  tkDial.c  tkEvent.c  tkFScale.c  tkInt.h  tkMenu.c  tkMenubutton.c  tkPhoto.h  tkPie.c  tkPixmap.c  tkRectOval.c  tkSelect.c  tkSend.c  tkStripchart.c  tkTextDisp.c  tkWindow.c  tkWm.c  tkXAccess.c  tkXAccess.h  uxpm.c  xpm3.c
(+337 files in other folders)
