#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.60])
AC_INIT([pgwish], [1.0], [mi.simon@fz-juelich.de])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SUBDIRS([tcl7.3 tk3.6 tcl-dp3.2 blt-1.7 itcl-1.5 spd-3.6 postgres/src calib coob_tx dipol_tools tgmt tclX7.3b itcl_LW-1.0/Widgets wigwam-1.5b/lib tix build])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# files to be generated
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
