
SUBDIRS = include libutils libtgtmgt libtools ddres download scripts tgtmgt tgt_mkcpus tgt_mkfc tgt_mkparam tgt_mkthosts udpterm udpteln upload utils

ACLOCAL_AMFLAGS = -I m4

dist_man1_MANS = man/man1/tgtmgt.1 man/man1/tgt_mkcpus.1 man/man1/tgt_mkdev.1 man/man1/tgt_mkfc.1 man/man1/tgt_mkparam.1 man/man1/tgt_mkrc.1 man/man1/tgt_mkthosts.1 man/man1/tgt_owner.1 man/man1/tgtres.1

