
ACLOCAL_AMFLAGS = -I m4

tixlibdir = $(datadir)/tix

dist_tixlib_DATA = Argv.tcl Balloon.tcl Combobox.tcl Control.tcl DlgBtns.tcl \
	Filebox.tcl Intrinsc.tcl LabFrame.tcl NewBind.tcl Primitiv.tcl \
	PupMenu.tcl \
	Select.tcl SListbox.tcl StdDlgB.tcl Tix.tcl tkBinding.tcl Toplevel.tcl \
	Utils.tcl tclIndex

SUBDIRS	= bindings bitmaps schemes

