
ACLOCAL_AMFLAGS = -I m4

itcllibdir = $(datadir)/itcl-LW

dist_itcllib_DATA = dd-prot.tcl menu_bar.tcl \
	FilteredBox.itcl ListBox.itcl SelectBox.itcl \
	Blink.itcl ButtonsBox.itcl Counter.itcl DataEntry.itcl Dial.itcl \
	DialogShell.itcl Feedback.itcl Icon.itcl InfoLine.itcl LogWindow.itcl \
	MainShell.itcl MessageLine.itcl MessageList.itcl Object.itcl \
	Paned.itcl \
	PixmapSelect.itcl Scheduler.itcl \
	ScrolledCanvas.itcl ScrolledList.itcl ScrolledTable.itcl \
	Shell.itcl Sqeezer.itcl StextEd.itcl Widget.itcl \
	tclIndex
