

ACLOCAL_AMFLAGS = -I m4


tclxsrcdir = $(datadir)/tclx

dist_tclxsrc_DATA = arrayprocs.tcl compat.tcl convlib.tcl edprocs.tcl \
              forfile.tcl globrecur.tcl help.tcl profrep.tcl \
              pushd.tcl setfuncs.tcl showproc.tcl stringfile.tcl \
              tcllib.tcl fmath.tcl tclshell.tcl buildhelp.tcl \
              parray.tcl foxGetOpt.tcl \
              buildidx.tcl TclInit.tcl \
              loadouster.tcl \
	      tclIndex

# tclsrcdir = $(datadir)/tcl
# dist_tclsrc_DATA = loadouster.tcl
